[package]
name = "logic"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Kujala <m.kujala@live.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
fancy-regex = "0.11.0"
lazy_static = "1.4"
unicode-segmentation = "1.9"
